--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ flask-moment = "*"
 flask-sqlalchemy = "*"
 flask-script = "*"
 flask-wtf = "*"
-"jinja2" = "*"
+Jinja2 = ">=2.10.1"
 mako = "*"
 markupsafe = "*"
 sqlalchemy = "*"
