--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ Werkzeug = "*"
 python-dotenv = "*"
 requests = "*"
 pymysql = "*"
+urllib3 = ">=1.24.2"
 pymongo = "*"
 redis = "==2.10.6"
 flask-debugtoolbar = "*"
